tests/pass/unary_minus.kl
fn inisiu() {
    nter a = -42;
    num  b = -3.14;
    nter c = -(-42);

    konfirma(a == -42);
    konfirma(c == 42);

    mostran(a);
    mostran(b);
    mostran(c);
}
