tests/fail/fail_missing_return.kl
// ERROR: non-void function that never returns.
fn sen_retornu() num {
    nter x = 42;
}

fn inisiu() {
    mostra(sen_retornu());
}
